# serializer version: 1
# name: TestIRSnapshotContract.test_ir_attachment_serialization_snapshot
  dict({
    'attachment_id': 'att:abc123',
    'attachment_type': 'embedding',
    'confidence': 'derived',
    'metadata': dict({
      'ast_element_id': 'elem_main',
    }),
    'payload': dict({
      'text': 'Function main',
      'vector': list([
        0.1,
        0.2,
      ]),
    }),
    'source': 'fc_embedding',
    'target_id': 'sym:abc123',
    'target_type': 'symbol',
  })
# ---
# name: TestIRSnapshotContract.test_ir_document_serialization_snapshot
  dict({
    'blob_oid': 'aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa',
    'content_hash': 'bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb',
    'doc_id': 'doc:abc123',
    'language': 'python',
    'path': 'src/main.py',
    'source_set': list([
      'ast',
      'scip',
    ]),
  })
# ---
# name: TestIRSnapshotContract.test_ir_edge_serialization_snapshot
  dict({
    'confidence': 'precise',
    'doc_id': 'doc:abc123',
    'dst_id': 'scip:snap:1:pkg.main.MyClass',
    'edge_id': 'edge:abc123',
    'edge_type': 'contain',
    'metadata': dict({
      'extractor': 'fastcode.adapters.scip_to_ir',
    }),
    'source': 'scip',
    'src_id': 'doc:abc123',
  })
# ---
# name: TestIRSnapshotContract.test_ir_occurrence_serialization_snapshot
  dict({
    'doc_id': 'doc:abc123',
    'end_col': 0,
    'end_line': 20,
    'metadata': dict({
      'confidence': 'precise',
      'source': 'scip',
    }),
    'occurrence_id': 'occ:abc123',
    'role': 'definition',
    'source': 'scip',
    'start_col': 0,
    'start_line': 10,
    'symbol_id': 'scip:snap:1:pkg.main.foo',
  })
# ---
# name: TestIRSnapshotContract.test_ir_snapshot_empty_collections_serialization_snapshot
  dict({
    'branch': None,
    'commit_id': None,
    'embeddings': list([
    ]),
    'metadata': dict({
    }),
    'relations': list([
    ]),
    'repo_name': 'empty-repo',
    'schema_version': 'ir.v2',
    'snapshot_id': 'snap:empty:000',
    'supports': list([
    ]),
    'tree_id': None,
    'units': list([
    ]),
  })
# ---
# name: TestIRSnapshotContract.test_ir_snapshot_full_serialization_snapshot
  dict({
    'branch': 'main',
    'commit_id': 'abc123',
    'embeddings': list([
    ]),
    'metadata': dict({
      'source_modes': list([
        'ast',
      ]),
    }),
    'relations': list([
      dict({
        'dst_unit_id': 'sym:1',
        'metadata': dict({
          'source': 'ast',
        }),
        'relation_id': 'rel:contain:doc:1:sym:1',
        'relation_type': 'contain',
        'resolution_state': 'structural',
        'src_unit_id': 'doc:1',
        'support_ids': list([
        ]),
        'support_sources': list([
          'ast',
        ]),
      }),
      dict({
        'dst_unit_id': 'sym:1',
        'metadata': dict({
          'doc_id': None,
          'source': 'ast',
        }),
        'relation_id': 'e:1',
        'relation_type': 'contain',
        'resolution_state': 'structural',
        'src_unit_id': 'doc:1',
        'support_ids': list([
        ]),
        'support_sources': list([
          'ast',
        ]),
      }),
    ]),
    'repo_name': 'my-repo',
    'schema_version': 'ir.v2',
    'snapshot_id': 'snap:my-repo:abc123',
    'supports': list([
      dict({
        'display_name': None,
        'enclosing_external_id': None,
        'end_col': 0,
        'end_line': 5,
        'external_id': None,
        'metadata': dict({
          'doc_id': 'doc:1',
        }),
        'path': None,
        'qualified_name': None,
        'role': 'definition',
        'signature': None,
        'source': 'ast',
        'start_col': 0,
        'start_line': 1,
        'support_id': 'occ:1',
        'support_kind': 'occurrence',
        'unit_id': 'sym:1',
      }),
    ]),
    'tree_id': None,
    'units': list([
      dict({
        'anchor_coverage': 0.0,
        'anchor_symbol_ids': list([
        ]),
        'candidate_anchor_symbol_ids': list([
        ]),
        'display_name': 'app.py',
        'docstring': None,
        'end_col': None,
        'end_line': None,
        'kind': 'file',
        'language': 'python',
        'metadata': dict({
          'blob_oid': None,
          'content_hash': None,
        }),
        'parent_unit_id': None,
        'path': 'app.py',
        'primary_anchor_symbol_id': None,
        'qualified_name': None,
        'signature': None,
        'source_set': list([
          'ast',
        ]),
        'start_col': None,
        'start_line': None,
        'summary': None,
        'unit_id': 'doc:1',
      }),
      dict({
        'anchor_coverage': 0.0,
        'anchor_symbol_ids': list([
        ]),
        'candidate_anchor_symbol_ids': list([
        ]),
        'display_name': 'main',
        'docstring': None,
        'end_col': None,
        'end_line': None,
        'kind': 'function',
        'language': 'python',
        'metadata': dict({
          'source': 'ast',
        }),
        'parent_unit_id': None,
        'path': 'app.py',
        'primary_anchor_symbol_id': None,
        'qualified_name': None,
        'signature': None,
        'source_set': list([
          'ast',
        ]),
        'start_col': None,
        'start_line': 1,
        'summary': 'Entry point',
        'unit_id': 'sym:1',
      }),
    ]),
  })
# ---
# name: TestIRSnapshotContract.test_ir_symbol_serialization_snapshot
  dict({
    'display_name': 'my_method',
    'end_col': 20,
    'end_line': 50,
    'external_symbol_id': 'pkg.main.MyClass.my_method',
    'kind': 'method',
    'language': 'python',
    'metadata': dict({
      'scip': True,
      'source': 'scip',
    }),
    'path': 'src/main.py',
    'qualified_name': 'pkg.main.MyClass.my_method',
    'signature': 'def my_method(self, x: int) -> str',
    'source_priority': 100,
    'source_set': list([
      'scip',
    ]),
    'start_col': 8,
    'start_line': 42,
    'symbol_id': 'scip:snap:1:pkg.main.MyClass.my_method',
  })
# ---
